# bunny-s3-proxy

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: build.yml  release.yml
src/: config.rs  error.rs  lock.rs  main.rs
src/bunny/: client.rs  mod.rs  types.rs
src/s3/: auth.rs  handlers.rs  mod.rs  multipart.rs  types.rs  xml.rs
tests/: e2e_memory.sh  e2e_zerofs.rs  e2e_zerofs.sh
