[package]
name = "bunny-s3-proxy"
version = "0.3.13"
edition = "2024"
description = "S3-compatible proxy for Bunny.net storage"
license = "AGPL-3.0"

[dependencies]
tokio = { version = "1.49", features = ["full"] }
dashmap = "6.1"
redis = { version = "1.0", features = ["tokio-comp"] }
axum = { version = "0.8", features = ["tokio"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
hyper = { version = "1.8", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }
reqwest = { version = "0.13", features = ["stream", "json"] }
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.38", features = ["serialize"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.19", features = ["v4"] }
percent-encoding = "2.3"
base64 = "0.22"
bytes = "1.11"
futures = "0.3"
async-stream = "0.3"
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0"
anyhow = "1.0"
url = "2.5"
mime_guess = "2.0"
md-5 = "0.10"
serde_urlencoded = "0.7"
tokio-util = { version = "0.7", features = ["io"] }

[profile.release]
lto = true
codegen-units = 1
